--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <!-- This adds some styling -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <!-- This changes the browser icon to the kinaxis logo -->
     <link rel="icon" href="https://www.kinaxis.com/themes/custom/kinaxis/favicon.ico" type="image/vnd.microsoft.icon">
@@ -24,40 +24,34 @@
 
     <div class="row">
         <div class="col">
-            <br>
             <p style="text-align:center;">
-                The CSV should have a header, be comma-delimited, and use double quotes for escapes.
+                Files should have a header, be comma or tab-delimited, and use double quotes for escapes.
             </p>
         </div>
     </div>
 
-    <!-- Form to upload a file -->
-    <div class="row">
-        <div class="col">
-            <form method="POST" action='/upload' enctype="multipart/form-data">
-                <div class="row">
-                    <div class="col-9">
-                        <input class="form-control form-control-lg" id="form-file" type="file" name="file">
-                    </div>
-                    <div class="col-3">
-                        <button id="upload" type="submit" value="file">Upload</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-    </div>
+    <form method="POST" action='/upload' enctype="multipart/form-data">
 
-    <!-- Download a file  -->
-    <div></div>
-        <form method="GET" action="/download">
-        <button id="download" type="submit">Download</button>
+        <!-- Upload Form  -->
+        <div class="container">
+            <label for="upload-form" class="form-label">Accepted file formats include csv, tsv, and xlsx.</label>
+            <input class="form-control" id="upload-form" type="file" name="file">
+        </div>
+        <br>
+
+        <!-- Upload Button  -->
+        <div class="button" style="text-align:center">
+            <button class="btn btn-secondary" id="upload-button" type="submit" value="file">Upload File</button>
+        </div>
+
     </form>
 
-
-
-
-
-
+    <!-- Download Button  -->
+    <div class="button" style="text-align:center">
+        <form method="GET" action="/download">
+            <button class="btn btn-secondary" id="download-button" type="submit">Download File</button>
+        </form>
+    </div>
 
 </body>
 </html>
